# mlops_new

./: .gitignore  LICENSE  Makefile  README.md  dvc.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mlops_new/: __init__.py  plots.py
mlops_new/features/: feature_engineering.py
mlops_new/modeling/: model_evaluation.py  predict.py  train.py
